--- a/portfolio-v2/src/App.css
+++ b/portfolio-v2/src/App.css
@@ -18,17 +18,21 @@ header {
 }
 
 header h1 {
-  margin-left: 25px;
+  margin: 3% 3%;
 }
 
 nav {
-  margin: 25px 5px 5px;
+  display: flex;
+  justify-content: space-between;
+  margin: 4% 4%;
 }
 
 nav a {
+  flex: auto;
   text-decoration: none;
   font-size: 20px;
   margin-right: 20px;
+  margin-left: 20px;
 }
 
 /* about me styles */
@@ -153,17 +157,26 @@ footer {
   /* background-color: aqua; */
 }
 
+#contact-me{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 /* I had to do both commands to make the h2 on the contact section center itself */
 footer h2 {
-  flex: 1 1 auto;
+  /* flex: 1 1 auto; */
   align-self: center;
-  margin-left: 35%;
+  /* margin-left: 35%; */
+  /* width: 100%; */
 }
 
 footer a {
   text-decoration: none;
   font-size: 20px;
   margin-right: 20px;
+  align-self: center;
 }
 
 /* media queries */
