added resume to about section and chagned work section layout

--- a/portfolio-v2/src/App.css
+++ b/portfolio-v2/src/App.css
@@ -52,7 +52,7 @@ nav a {
 
 .desc {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   font-size: 32px;
   /* font size changes with media query */
 }
@@ -94,7 +94,7 @@ nav a {
   display: flex;
   flex-wrap: wrap;
   align-self: center;
-  flex: 1 1 100%;
+  flex: 1 1 40%;
   height: auto;
   position: relative;
 
