--- a/src/App.css
+++ b/src/App.css
@@ -14,13 +14,13 @@ header {
 }
 
 header h1 {
-  margin: 3% 3%;
+  margin: 3% 15%;
 }
 
 nav {
   display: flex;
   justify-content: space-between;
-  margin: 4% 4%;
+  margin: 2% 10%;
 }
 
 nav a {
@@ -70,6 +70,7 @@ nav a {
   flex-wrap: wrap;
   flex-direction: column;
   align-items: center;
+  margin-top: 2%;
 }
 
 #my-work h2 {
